# Demo_MCP

./: .env_example  .gitignore  README.md  authnticate_gmail.py  main.py  main_sdk.py  mcp_config.json  pyproject.toml  requirements.txt
src/core/: sdk_config.py
src/core/mcp/: manager.py  tool_registry.py
src/core/mcp/handlers/: base.py  docker_handler.py  http_handler.py  node_handler.py  python_handler.py
src/utils/: ui.py
